--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
       .contact {
         display: flex;
         justify-content: center;
+        
       }
       .contact a {
         text-decoration: none;
@@ -134,14 +135,12 @@
 
     <div class="contact">
       <a href="https://wa.me/+918639374440" target="_blank"
-        >whatsapp contact me</a
+        >contact me on whatsapp</a
       >
-    </div>
-    <div class="contact">
       <a
         href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcSHvbSjzbVrpZwfQGpwNLZsgxwnnkrgzRSXmpCNZgfXDDVtddNgJdPfbHfRtZgLrZDNqzHJF"
         target="_blank"
-        >email contact me</a
+        >gmail me</a
       >
     </div>
     <footer>
