--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       }
       .contact {
         display: flex;
-        justify-content: center;
+        justify-content: space-evenly;
         
       }
       .contact a {
@@ -135,13 +135,12 @@
 
     <div class="contact">
       <a href="https://wa.me/+918639374440" target="_blank"
-        >contact me on whatsapp</a
-      >
+        >contact me on whatsapp</a>
       <a
         href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcSHvbSjzbVrpZwfQGpwNLZsgxwnnkrgzRSXmpCNZgfXDDVtddNgJdPfbHfRtZgLrZDNqzHJF"
         target="_blank"
-        >gmail me</a
-      >
+        >gmail me</a>
+
     </div>
     <footer>
       <p>&copy; <span id="year">2024</span> Likhith Aningi</p>
