--- a/index.html
+++ b/index.html
@@ -8057,7 +8057,8 @@
           jQuery, React and <b>Java</b>. My expertise extends to database
           management and optimization with MySQL, MongoDB, Redis and ClickHouse.
         </p>
-        <h2>Education</h2>
+        <h2>Education </h2>
+
         <p>
           I graduated with a major in<span
             class="b-font"
@@ -8067,8 +8068,8 @@
           >
           in 2023, where I developed a solid foundation in both theoretical and
           practical aspects of software engineering. My goal is to bridge the
-          gap between academic knowledge and industry requirements, preparing
-          you to be a versatile and competent full stack developer.
+          gap between academic knowledge and industry requirements, be a
+          versatile and competent full stack developer.
         </p>
         <h2>Tech Stack</h2>
         <ul class="tech-stack">
@@ -8122,12 +8123,12 @@
             Linux
           </li>
         </ul>
-        <h2>Hobbies</h2>
+        <h2>Hobbiess</h2>
         <ul class="hobbies-list">
           <li>🌙 Coding and programming</li>
           <li>📚 Reading tech blogs and articles</li>
           <li>🌲 Cricket and outdoor activities</li>
-          <li>🎧 Music and Films</li>
+          <li>🎧 Music and 🎬 Films</li>
         </ul>
       </div>
       <div class="container">
@@ -8168,7 +8169,8 @@
           /></a>
           <p>
             A web app built with react js to demonstrate some mini tasks and
-            some of React's core concepts demos
+            some of React's core concepts demos like stop watch, digital clock,
+            to-do list and so on...
           </p>
         </div>
         <div class="project">
@@ -8197,7 +8199,7 @@
             with RNN and track their progress efficiently (built upon python).
           </p>
         </div>
-        <h2>Links</h2>
+        <h2>Links 🔗</h2>
         <div class="contacts">
           <a
             title="checkout my linkedin"
@@ -8205,12 +8207,26 @@
             href="https://www.linkedin.com/in/likhith-aningi/"
             ><img src="images/linkedin.svg" alt="linkedin"
           /></a>
-          <a
+          <!-- <a
             title="download my resume"
             download="LIKHITH_JAVA_DEV.pdf"
             href="./LIKHITH_JAVA_FULLSTACK_DEV.pdf"
             ><img src="images/download-resume.png" alt="download-resume"
-          /></a>
+          /></a> -->
+          <a
+            title="download my resume"
+            download="LIKHITH_JAVA_DEV.pdf"
+            href="./LIKHITH_JAVA_FULLSTACK_DEV.pdf"
+          >
+            <button class="download-button">
+              Download Resume
+              <img
+                src="images/download-resume.png"
+                alt="Resume"
+                class="resume-image"
+              />
+            </button>
+          </a>
           <a
             title="ping me on whatsapp"
             target="_blank"
@@ -8223,12 +8239,9 @@
     <footer>
       <p class="b-font">&copy; <span id="year">2024</span> Likhith Aningi</p>
     </footer>
-    <img
-      title="send me a mail"
-      class="contact-button"
-      onclick="toggleForm()"
-      src="images/contact-me.svg"
-    />
+    <div title="send me a mail" class="contact-button" onclick="toggleForm()">
+      <img src="images/contact-me.svg" />
+    </div>
     <div class="contact-form" id="contactForm">
       <form method="POST" id="form">
         <h3 class="b-font">Contact me via email</h3>
