--- a/index.html
+++ b/index.html
@@ -8049,7 +8049,7 @@
         <p>
           Hello and welcome to my site I’m Likhith, a passionate
           <span class="b-font" style="display: inline"
-            >&ldquo; Full stack developer &rdquo; with 1.5 years of
+            >&ldquo; Full stack developer &rdquo; with 2+ years of
             experience</span
           >
           at Way2News Pvt. Ltd. During my tenure, I’ve had the opportunity to
