testing clean ui

--- a/index.html
+++ b/index.html
@@ -8046,6 +8046,7 @@
     <main>
       <div class="container">
         <h2>About Me</h2>
+        <a style="font-size: small;float:right;color:white" title="wanna see me on a cleaner ui ?" href="clean-ui.html" target="_blank"><span>cleaner ui</span></a>
         <p>
           Hello and welcome to my site I’m Likhith, a passionate
           <span class="b-font" style="display: inline"
