added select bar to switch uis

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://likhithaningi.com/">
+    <meta property="og:url" content="https://likhith-aningi.github.io/me/">
     <meta property="og:title" content="Likhith Aningi - Full Stack Java Developer | Software Engineer">
     <meta property="og:description"
         content="Likhith Aningi is a Full Stack Java Developer with 2+ years of experience in Spring Boot, React.js, and Microservices. Currently working at Way2News, specialized in scalable enterprise applications.">
@@ -25,7 +25,7 @@
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://likhithaningi.com/">
+    <meta property="twitter:url" content="https://likhith-aningi.github.io/me/">
     <meta property="twitter:title" content="Likhith Aningi - Full Stack Java Developer | Software Engineer">
     <meta property="twitter:description"
         content="Likhith Aningi is a Full Stack Java Developer with 2+ years of experience in Spring Boot, React.js, and Microservices. Currently working at Way2News, specialized in scalable enterprise applications.">
@@ -89,6 +89,14 @@
             <a href="#Contact" aria-label="Contact Info"><img src="Img/contact-mail.png" alt="Contact"
                     title="Contact Info"></a>
         </nav>
+        <div class="ui-switcher ui-toggle">
+            <i class="fa-solid fa-caret-down " aria-label="Switch UI Theme"></i>
+            <ul id="uiDropdown" class="ui-dropdown">
+                <li data-ui="classic">Classic UI</li>
+                <li data-ui="clean">Clean UI</li>
+            </ul>
+        </div>
+
     </header>
 
     <main class="sideNav">
@@ -144,7 +152,8 @@
                 <div class="box2">
                     <img src="Img/graduated.png" alt="Project Icon">
                     <h3> Spring Boot JWT <br> React Project </h3>
-                    <a href="https://github.com/Likhith-Aningi/ReactPackedWithSwagger" target="_blank"> <button style="width:70px"><i class="fab fa-github"></i> code 
+                    <a href="https://github.com/Likhith-Aningi/ReactPackedWithSwagger" target="_blank"> <button
+                            style="width:70px"><i class="fab fa-github"></i> code
                         </button> </a>
 
                     <!-- <a href="https://github.com/Likhith-Aningi/ReactPackedWithSwagger" target="_blank">
@@ -355,7 +364,8 @@
                         <a class='toGlow' href="https://github.com/Likhith-Aningi" target="_blank"><i
                                 class="fab fa-github"></i></a>
                         <a href="https://leetcode.com/u/likhithaningi/" target="_blank"><i class="fas fa-code"></i></a>
-                        <a href="resources/LIKHITH_ANINGI_JAVA_DEVELOPER.pdf" target="_blank"><i class="fas fa-file-download"></i></a>
+                        <a href="resources/LIKHITH_ANINGI_JAVA_DEVELOPER.pdf" target="_blank"><i
+                                class="fas fa-file-download"></i></a>
                     </div>
                 </div>
             </div>
