--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon"
-        href="https://lh3.googleusercontent.com/ogw/AF2bZyjbFelRXOwaho2E7NedDmSFQKmTe0TWl6rt7ltg-LFlc7tp=s32-c-mo">
+        href="images/favicon.ico">
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="style.css">
