--- a/classic-ui.html
+++ b/classic-ui.html
@@ -8047,7 +8047,7 @@
       <div class="container">
         <h2>About Me</h2>
         <a style="font-size: small;float:right;color:white" title="wanna see me on a cleaner ui ?" href="clean-ui.html" target="_self"><span>cleaner ui</span></a>
-        <a style="font-size: small;float:right;margin-right:10px;color:white" title="wanna see me on a modern ui ?" href="/" target="_self"><span>modern ui</span></a>
+        <a style="font-size: small;float:right;margin-right:10px;color:white" title="wanna see me on a modern ui ?" href="index.html" target="_self"><span>modern ui</span></a>
         <p>
           Hello and welcome to my site I’m Likhith, a passionate
           <span class="b-font" style="display: inline"
